--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <html>
 
 <head>
- <style> 
-  
-   
+<style>
+     body{
+         text-align: center;
+         background-image: linear-gradient(rgb(33, 51, 209), rgb(255, 255, 255), rgb(0, 51, 255));
+         min-width: 100%;
+         min-height: 100%;
+      }
+  </style>
+
+
   
   
   
